<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/twitter_blue"
    android:gravity="center_horizontal|top"
    android:orientation="vertical"
    android:padding="@dimen/large"
    android:weightSum="2"
    tools:context=".controller.activities.SplashActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/ic_logo_white"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal|bottom"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/splash_welcome_message"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_medium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small"
            android:gravity="center"
            android:text="@string/splash_intro"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_medium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xxx_large"
            android:background="@drawable/white_rounded_button"
            android:clickable="true"
            android:gravity="center"
            android:padding="@dimen/xx_small"
            android:text="@string/splash_sign_up"
            android:textColor="@color/twitter_blue"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/splash_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:text="@string/splash_log_in"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
